--- a/app/build.gradle
+++ b/app/build.gradle
@@ -89,6 +89,9 @@ dependencies {
 
 
 
+    implementation 'android.arch.persistence.room:runtime:1.1.0-alpha1'
+    implementation 'android.arch.persistence.room:rxjava2:1.1.0-alpha1'
+    kapt  "android.arch.persistence.room:compiler:1.1.0-alpha1"
 
 
 }
